# DynamicDNSWatcher

./: .gitignore  CMakeLists.txt  DynamicDNSWatcher.cpp  DynamicDNSWatcher.sln  DynamicDNSWatcher.vcxproj  DynamicDNSWatcher_1.20220803-1_armhf.deb  DynamicDNSWatcher_1.20220805-1_armhf.deb  DynamicDNSWatcher_1.20220808-1_armhf.deb  README.md  dynamicdnswatcher.cpp  dynamicdnswatcher.service  dynamicdnswatcher.txt  makefile  postinst  postrm
DynamicDNSWatcher/DEBIAN/: control  postinst  prerm
DynamicDNSWatcher/usr/local/lib/systemd/system/: dynamicdnswatcher.service
